fixed feed width on smaller screens

--- a/blog.css
+++ b/blog.css
@@ -31,7 +31,7 @@ a {
 .feed {
     margin: 0;
     width: 50%;
-    min-width: 375px;
+    min-width: 350px;
     max-width: 800px;
 }
 
